tests/ui/parser/attribute/attrs-after-extern-mod.stderr
error: expected item after attributes
  --> $DIR/attrs-after-extern-mod.rs:6:5
   |
LL | extern "C" {
   |            - while parsing this item list starting here
LL |     #[cfg(stage37)]
   |     ^^^^^^^^^^^^^^^
LL | }
   | - the item list ends here

error: aborting due to 1 previous error

